Authorization introduced, GET api/book/ access restricted only to users. TokenVerifier  middleware function introduced to restrict access. Swagger API documentation updated.
